# fairness-cards

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/big_study_scored/: run_health.csv  summary_by_protocol.csv  summary_by_slice.csv  summary_by_slice_decoding.csv  summary_by_slice_occupation.csv  summary_by_slice_prompt.csv  summary_by_slice_prompt_decoding.csv  summary_disparities.csv
analysis/mistral_probe_scored/: summary_by_cell.csv  summary_by_decoding.csv
analysis/pilot_scored/: summary_by_protocol.csv  summary_by_slice.csv  summary_by_slice_decoding.csv  summary_by_slice_prompt.csv  summary_disparities.csv
cards/: qwen2.5-7b-instruct.yaml
code/: download_qwen.py  merge_jsonl.py  run_eval.py  run_mistral_probe.py  score_mistral_probe.py  score_outputs.py
code/prompts/: make_big_study_csv.py  make_pilot_csv.py  split_big_csv.py
docs/: PAGE_README.md  index.html
docs/static/cards/: qwen2.5-7b-instruct.md
docs/static/css/: index.css
notebooks/: 01_disparities.ipynb  02_by_slice.ipynb  03_by_prompt_family.ipynb  04_paper_figures.ipynb
prompts/: prompt_expanded_big.csv  prompt_expanded_pilot.csv
prompts/big_chunks/: prompt_chunk_00.csv  prompt_chunk_01.csv  prompt_chunk_02.csv  prompt_chunk_03.csv  prompt_chunk_04.csv  prompt_chunk_05.csv  prompt_chunk_06.csv  prompt_chunk_07.csv
schemas/: core.yaml  llm.yaml
tools/: build_notebooks.py  render_card.py  scrub_release.py
