[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairness-cards"
version = "0.1.0"
description = "Fairness audit code for the ICML 2026 paper 'Fairness Failure in Generative Models is an Evaluation Problem'."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mariia Vladimirova", email = "m.vladimirova@criteo.com" },
    { name = "Jean-Yves Franceschi" },
    { name = "Thibaut Issenhuth" },
]
keywords = ["fairness", "generative-models", "llm-evaluation", "icml"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["code"]
